<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">PronovosCM</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">LOG IN</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="internet_connection_check" translatable="false">Please check your internet connection</string>
    <string name="internet_connection_check_transfer_overview" translatable="false">Internet Connection has been lost. Please reconnect to continue.</string>
    <string name="please_enter_a_valid_email_address" translatable="false">Please enter a valid email address.</string>
    <string name="the_email_must_be_a_valid_email_address" translatable="false">The email must be a valid email address.</string>
    <string name="please_enter_your_password" translatable="false">Please enter your password.</string>
    <string name="are_you_sure_you_want_to_logout" translatable="false">Are you sure you want to Logout?</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="photos" translatable="false">Photos</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="drawings" translatable="false">Drawings</string>
    <string name="field_paper_work" translatable="false">Field Paperwork</string>
    <string name="new_album" translatable="false">New Album</string>
    <string name="album_name_str" translatable="false">Album Name</string>
    <string name="save" translatable="false">Save</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="description" translatable="false">Description</string>
    <string name="no_photos_status" translatable="false">No photos have been added to this album yet.</string>
    <string name="forgot_password_heading" translatable="false">Forgot Password</string>
    <string name="enter_a_name_for_this_album" translatable="false">Enter a name for this album</string>
    <string name="tap_to_markup_a_photo_individually" translatable="false">Tap to markup a photo individually</string>
    <string name="select_tags" translatable="false">Select tags</string>
    <string name="upload_photos" translatable="false">Upload Photos</string>
    <string name="are_you_sure_you_want_to_discard_these_photos" translatable="false">Are you sure you want to discard these photos?</string>
    <string name="message" translatable="false">Message</string>
    <string name="select_album" translatable="false">Select Album</string>
    <string name="select_company_list" translatable="false">Select Company</string>
    <string name="title_select_assignee" translatable="false">Select Assignee</string>
    <string name="uploaded_by" translatable="false">Uploaded By</string>
    <string name="pronovos_image" translatable="false">Pronovos Image</string>
    <string name="edit_image" translatable="false">Edit Image</string>
    <string name="offline_mode" translatable="false">Offline Mode</string>
    <string name="offline_mode_equipment" translatable="false">Some Equipment Modules not available in Offline Mode.</string>
    <string name="search" translatable="false">Search</string>
    <string name="no_record_found" translatable="false">Cannot Retrieve Data. Please try reconnecting to internet.</string>
    <string name="update" translatable="false">Update</string>
    <string name="synced" translatable="false">Synced</string>
    <string name="unavailable_offline" translatable="false">Unavailable Offline</string>
    <string name="unavailable_offline_document" translatable="false">Unavailable\nOffline</string>
    <string name="more_than_10_image_message" translatable="false">You can upload 25 images at a time, Please click on Next to proceed.</string>
    <string name="more_than_1_image_message" translatable="false">You can upload 1 image at a time, Please click on Next to proceed.</string>
    <string name="daily_reports" translatable="false">Daily Reports</string>
    <string name="inspections" translatable="false">Inspections</string>
    <string name="weather" translatable="false">Weather</string>
    <string name="work_impacts" translatable="false">Work Impacts</string>
    <string name="work_impact" translatable="false">Work Impact</string>
    <string name="work_details" translatable="false">Work Details</string>
    <string name="weather_impact" translatable="false">Weather Impact</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="conditions" translatable="false">Conditions</string>
    <string name="notes" translatable="false">Notes</string>
    <string name="weather_widget" translatable="false">Weather Widget</string>
    <string name="punch_list" translatable="false">Punch List</string>
    <string name="forms" translatable="false">Forms</string>
    <string name="documents" translatable="false">Documents</string>
    <string name="status" translatable="false">Status</string>
    <string name="date_due" translatable="false">Date Due</string>
    <string name="crew" translatable="false">Crew</string>
    <string name="this_daily_report_will_be_synced_once_online" translatable="false">This Daily Report will be synced once Online</string>
    <string name="add_new_crew" translatable="false">Add New Crew</string>
    <string name="apprentice" translatable="false">Apprentice</string>
    <string name="foreman" translatable="false">Foreman</string>
    <string name="journeyman" translatable="false">Journeyman</string>
    <string name="supt" translatable="false">Supt</string>
    <string name="trade" translatable="false">Trade</string>
    <string name="company" translatable="false">Company</string>
    <string name="attachment" translatable="false">Attachment</string>
    <string name="site_workers" translatable="false">Site Workers</string>
    <string name="location" translatable="false">Location</string>
    <string name="details_summary" translatable="false">Details Summary</string>
    <string name="add_new_punch_list" translatable="false">Add New Punch List</string>
    <string name="edit_punch_list" translatable="false">Edit Punch List</string>
    <string name="to" translatable="false">To</string>
    <string name="cc" translatable="false">Cc</string>
    <string name="send" translatable="false">Send</string>
    <string name="please_select_assignee" translatable="false">Please select assignee.</string>
    <string name="select_assignee" translatable="false">Select Assignee.</string>
    <string name="enter_description" translatable="false">Enter Description.</string>
    <string name="please_select_trade" translatable="false">Please select trade.</string>
    <string name="are_you_sure_you_want_to_exit_without_saving_your_changes" translatable="false">Are you sure you want to exit without saving your changes?</string>
    <string name="are_you_sure_you_want_to_exit_without_saving" translatable="false">Are you sure you want to exit without saving?</string>
    <string name="are_you_sure_you_want_to_exit" translatable="false">Are you sure you want to exit?</string>
    <string name="are_you_sure_you_want_to_delete_this_entry" translatable="false">Are you sure you want to delete this entry?</string>
    <string name="are_you_sure_you_want_to_delete" translatable="false">Are you sure you want to delete?</string>
    <string name="are_you_sure_you_want_to_delete_this_issue" translatable="false">Are you sure you want to delete this issue?</string>
    <string name="are_you_sure_you_want_to_permanently_remove_this_attachment" translatable="false">Are you sure you want to permanently remove this attachment?</string>
    <string name="edit_work_impact" translatable="false">Edit Work Impact</string>
    <string name="add_work_impact" translatable="false">Add Work Impact</string>
    <string name="add_work_details" translatable="false">Add Work Details</string>
    <string name="max_work_impact_attachement_message" translatable="false">You have reached the limit of 10 images per work impact item.</string>
    <string name="max_attachement_message" translatable="false">You have reached the limit of 10 images per work details item.</string>
    <string name="max_attachement_message_punch_list" translatable="false">You have reached the limit of 10 images per Punch List Item.</string>
    <string name="assigned_to" translatable="false">Assigned To *</string>
    <string name="assigned_to_small" translatable="false">Assigned to</string>
    <string name="punch_list_item_description" translatable="false">Title*</string>
    <string name="date_created" translatable="false">Date Created</string>
    <string name="created_by" translatable="false">Created by</string>
    <string name="new_title" translatable="false">New</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="select_picture" translatable="false">Select Picture</string>
    <string name="choose_from_library" translatable="false">Choose from Library</string>
    <string name="take_photo" translatable="false">Take Photo</string>
    <string name="add_photo" translatable="false">Add Photo!</string>
    <string name="edit_work_details" translatable="false">Edit Work Details</string>
    <string name="link_existing" translatable="false">Link Existing</string>
    <string name="are_you_sure_you_want_to_remove_this_punch_list_markup_from_the_drawing" translatable="false">Are you sure you want to remove this punch list markup from the drawing?</string>
    <string name="enter_supt" translatable="false">Enter Supt</string>
    <string name="enter_apprentice" translatable="false">Enter Apprentice</string>
    <string name="enter_foreman" translatable="false">Enter Foreman</string>
    <string name="enter_journeyman" translatable="false">Enter Journeyman</string>
    <string name="enter_location" translatable="false">Enter Location</string>
    <string name="enter_details_summary" translatable="false">Enter Details Summary</string>
    <string name="impact_summary" translatable="false">Impact Summary</string>
    <string name="enter_impact_summary" translatable="false">Enter Impact Summary</string>
    <string name="search_here" translatable="false">Search Here</string>
    <string name="create_new_album" translatable="false">Create New Album</string>
    <string name="albums" translatable="false">Albums</string>
    <string name="log_in" translatable="false">LOG IN</string>
    <string name="enter_your_password_here" translatable="false">Enter password here</string>
    <string name="rfi_information" translatable="false">RFI Information</string>
    <string name="rfi_reference_drawing_number" translatable="false">Reference Drawing Number</string>
    <string name="rfi_reference_spec" translatable="false">Reference Spec Section</string>
    <string name="rfi_title" translatable="false">RFI Title</string>
    <string name="rfi_cost_impact" translatable="false">Cost Impact</string>
    <string name="rfi_schedule_impact" translatable="false">Schedule Impact</string>
    <string name="received_from" translatable="false">Received From</string>
    <string name="information" translatable="false">Information</string>
    <string name="submittals_number" translatable="false">Submittal Number</string>
    <string name="revision_number_text" translatable="false">Revision Number</string>
    <string name="title" translatable="false">Title</string>
    <string name="ball_in_court" translatable="false">Ball in Court</string>
    <string name="spec_section" translatable="false">Spec Section</string>
    <string name="type" translatable="false">Type</string>
    <string name="author" translatable="false">Author</string>
</resources>