<?xml version="1.0" encoding="utf-8"?>
<com.pronovoscm.utils.ui.RotateLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rotate_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:angle="0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:visibility="gone"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/message"/>

        <TextView
            android:id="@+id/message"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginRight="@dimen/_7sdp"
            android:paddingTop="@dimen/forget_password_dailog"
            android:textSize="@dimen/dashboard_text_size"
            android:text="@string/are_you_sure_you_want_to_discard_these_photos"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/button_ok"
                android:textSize="@dimen/dashboard_text_size"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/gray_948d8d"/>

            <Button
                android:id="@+id/button_ok"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/dashboard_text_size"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </LinearLayout>


</com.pronovoscm.utils.ui.RotateLayout>
