<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/projectCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_8sdp"
    android:layout_marginVertical="@dimen/_3sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/information"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvSubmittalNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/submittals_number"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvSubmittalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="52" />

        <TextView
            android:id="@+id/tvRevisionNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/revision_number_text"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvRevisionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="52" />

        <TextView
            android:id="@+id/tVTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="-" />

        <TextView
            android:id="@+id/tvSubmittalStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/status"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvSubmittalStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="52" />


        <TextView
            android:id="@+id/tVBallInCourtLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ball_in_court"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tVBallInCourt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="-" />


        <TextView
            android:id="@+id/tVSpecSectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/spec_section"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tVSpecSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="-" />

        <TextView
            android:id="@+id/tvLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/location"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="-" />

        <TextView
            android:id="@+id/tvTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/type"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="-" />

        <TextView
            android:id="@+id/tvAuthorLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/author"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="-" />

        <TextView
            android:id="@+id/tvRecFromLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/received_from"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size" />

        <TextView
            android:id="@+id/tvRecFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/gray_535a73"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="normal"
            tools:text="-" />
    </LinearLayout>


</androidx.cardview.widget.CardView>
